index.css
body {
  margin: 0;
  padding: 0;
  font-family: "Smythe", cursive;
  background-color: #f5f5f5;
}

h1,
p,
.item h3,
.item-text {
  margin: 0;
}

.header {
  padding: 0;
  background: url("./assets/headerBackground.jpg") no-repeat center/cover;
  color: #fff;
  font-weight: bold;
  border-bottom: 5px solid #333;
}

.header h1 {
  font-size: 48px;
  margin-top: 20px;
}

.header p {
  font-size: 24px;
  margin-bottom: 20px;
}

.header-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 30px 0;
}

.item-details {
  display: flex;
}

#item-container {
  color: #000;
  padding: 35px 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  margin: 20px;
}

.item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 25px 0;
  width: 80%;
  border-bottom: 2px solid #ebebeb;
}

.item:last-child {
  border-bottom: none;
}

.item-text {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  margin-bottom: 10px; /* Adjust the margin as needed */
}

.item-name,
.item-price {
  color: #000;
  font-size: 24px;
}

.item-name {
  font-weight: bold;
}

.item-ingredients {
  color: #8b8b8b;
  font-size: 18px;
}

.item-price {
  font-size: 24px;
}

.emoji {
  font-size: 100px;
}

.add-item {
  font-size: 32px;
  cursor: pointer;
  transition: color 0.3s;
}

.add-item:hover {
  color: #007bff;
}

footer {
  display: flex;
  align-items: center;
  flex-direction: column;
  padding: 20px 0;
  background-color: #333;
  color: #ffffff;
}

footer h1 {
  font-size: 36px;
  margin-bottom: 20px;
}

button {
  padding: 10px 20px;
  background-color: #16db99;
  color: #fff;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s;
  width: 475.911px;
  height: 71.304px;
  font-family: Verdana, sans-serif;
  font-size: 20px;
  font-style: normal;
  font-weight: 700;
  line-height: 31.119px;
}

button:hover {
  background-color: #0056b3;
}

@media (max-width: 768px) {
  button {
    width: 80%;
    height: auto;
  }
}

@media (max-width: 480px) {
  button {
    width: 100%;
    height: auto;
    padding: 12px 24px;
  }
}

#total {
  font-size: 24px;
  font-weight: bold;
  margin-top: 20px;
  margin-bottom: 20px;
  color: #fff;
}

order {
  border-bottom: 1px solid #ebebeb;
  padding-bottom: 20px;
  margin-bottom: 20px;
}

.modal {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
}

.modal-content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 20px;
  background-color: #ffffff;
  width: 300px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

input {
  width: 100%;
  padding: 10px;
  margin: 10px 0;
  box-sizing: border-box;
}

.modal-content button {
  max-width: 100%;
  box-sizing: border-box;
  overflow: hidden;
}

#paymentModal {
  font-family: "Verdana", sans-serif;
}

.confirmation-modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  display: none;
  justify-content: center;
  align-items: center;
}

.confirmation-content {
  background-color: #fff;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  text-align: center;
  width: 80%;
  max-width: 400px;
}

#closeConfirmation {
  width: 90%;
  max-width: 300px;
  margin-top: 15px;
  background-color: #16db99;
  color: white;
  padding: 10px 20px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}

.remove-item {
  color: #fff; /* Classic hyperlink blue, adjust as needed */
  text-decoration: underline;
  cursor: pointer;
  font-size: 14px; /* Adjust font size as needed */
  font-family: "Smythe", cursive; /* Adjust font family as needed */
}

.remove-item:hover {
  color: #fff; /* Darker shade of blue on hover, adjust as necessary */
  text-decoration: none; /* Optional: remove underline on hover for a dynamic effect */
}

